--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -12,7 +12,7 @@
         style="float:right"
         class="glyphicon glyphicon-question-sign"
         uib-popover-template="externalRisk.templateUrl" popover-trigger="click"
-        popover-placement="auto right" popover-append-to-body="true" popover-is-open="srsViewState.status.riskInfoOpen">
+        popover-placement="auto right" popover-append-to-body="false" popover-is-open="srsViewState.status.riskInfoOpen">
       </div>
     </div>
     <ul id="tab{{id}}" class="nav nav-tabs nav-justified">
