--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -19,7 +19,7 @@
         style="float:right"
         class="glyphicon glyphicon-question-sign"
         uib-popover-template="externalConsent.templateUrl" popover-trigger="click"
-        popover-placement="auto right" popover-append-to-body="true" popover-is-open="consentInfoOpen">
+        popover-placement="auto right" popover-append-to-body="false" popover-is-open="consentInfoOpen">
       </div>
 
       <div class="line form-group ng-scope">
