--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fmb/wcFmbHelpDisplay.directive.html
@@ -1,15 +1,16 @@
 <div>
   <div ng-show="fmbAvailable">
     <div class="fmb">
-      <button id="{{relatedFormId}}-fmb-button" type="button" class="btn btn-default btn-fmb" ng-click="status.open = !status.open; closeSrs();">FMB <i
+      <button id="{{relatedFormId}}-fmb-button" type="button" class="btn btn-default btn-fmb" ng-click="toggleFMB()">FMB <i
           class="glyphicon fmb-glyphicon"
-          ng-class="{'glyphicon-minus-sign': status.open, 'glyphicon-plus-sign': !status.open}"></i></button>
+          ng-class="{'glyphicon-minus-sign': status.open, 'glyphicon-plus-sign': !status.open}"></i>
+      </button>
       <div class="panel-wrapper-fmb" ng-show="status.open" ng-class="{'fmb-collapse': !status.open}">
         <div class="panel-arrow"></div>
         <div class="panel panel-fmb-info">
-          <uib-tabset active="fmbStates.activeDiagnos" class="fmb-panel-tabset nav-tabs__fmb"
-                      ng-class="{'hide-tabs': (fmbStates.diagnoses | keyLength) < 2}">
-            <uib-tab index="$index + 1" ng-repeat="fmb in fmbStates.diagnoses" heading="{{fmb.diagnosKod}}"
+          <uib-tabset active="fmbViewState.activeDiagnos" class="fmb-panel-tabset nav-tabs__fmb"
+                      ng-class="{'hide-tabs': (fmbViewState.diagnoses | keyLength) < 2}">
+            <uib-tab index="$index + 1" ng-repeat="fmb in fmbViewState.diagnoses" heading="{{fmb.diagnosKod}}"
                      disable="false" select="selectDiagnos($index)">
               <wc-fmb-content related-form-id="relatedFormId" fmb="fmb" status="status" field-name="fieldName"></wc-fmb-content>
             </uib-tab>
@@ -17,8 +18,5 @@
         </div>
       </div>
     </div>
-  </div>
-  <div ng-class="{'fmb-column': fmbAvailable}">
-    <div ng-transclude></div>
   </div>
 </div>
