--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -18,7 +18,7 @@
       <div 
         style="float:right"
         class="glyphicon glyphicon-question-sign"
-        uib-popover-template="externalConsent.templateUrl" popover-trigger="click"
+        uib-popover-template="externalConsent.templateUrl" popover-trigger="outsideClick"
         popover-placement="auto right" popover-append-to-body="false" popover-is-open="consentInfoOpen">
       </div>
 
