--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -11,7 +11,7 @@
         <div 
         style="float:right"
         class="glyphicon glyphicon-question-sign"
-        uib-popover-template="externalRisk.templateUrl" popover-trigger="click"
+        uib-popover-template="externalRisk.templateUrl" popover-trigger="outsideClick"
         popover-placement="auto right" popover-append-to-body="false" popover-is-open="srsViewState.status.riskInfoOpen">
       </div>
     </div>
