--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -24,7 +24,7 @@
 
       <div class="line form-group ng-scope">
         <label class="radio-inline line">
-              <input type="radio" name="capacityForWorkForecast{{id}}" ng-value="'JA'" ng-model="srsViewState.consent" class="ng-pristine ng-untouched ng-valid" ng-change="setConsent('true')"> Ja</label>
+              <input type="radio" name="capacityForWorkForecast{{status.id}}" ng-value="'JA'" ng-model="srsViewState.consent" class="ng-pristine ng-untouched ng-valid" ng-change="setConsent('true')"> Ja</label>
       </div>
       <div class="line form-group ng-scope">
         <label class="radio-inline line">
