Fixade att samtyckes knapparna inte fick rätt id i name

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsContent.directive.html
@@ -1,4 +1,4 @@
-<div>
+<div ng-if="status.open">
   <div class="panel-heading panel-srs-info-heading">
     <div class="srs-panel-title">
       <h4><span id="srs_diagnos_heading_{{relatedFormId}}">{{srsViewState.diagnosKod}} - {{srsViewState.diagnosBeskrivning}}</span>
