--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/fmbWrapper.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/wrapper/fmbWrapper.formly.html
@@ -1,5 +1,5 @@
 <div ng-class="to.panelClass">
-  <wc-fmb-help-display related-form-id="{{to.relatedFormId}}" field-name="{{to.fieldName}}">
+  <wc-help-wrapper fmb-id="{{to.relatedFormId}}" fmb-field-name="{{to.fieldName}}">
     <formly-transclude></formly-transclude>
-  </wc-fmb-help-display>
+  </wc-help-wrapper>
 </div>
