INTYG-5110: riskflaggan försvinner när svar på frågor ändras

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -1,5 +1,5 @@
 <div id="srsResult{{id}}">
-    <div ng-if="srsViewState.prediktionInfo && srsViewState.prediction.statusCode">
+    <div ng-if="srsViewState.prediction.description && srsViewState.prediktionInfo && srsViewState.prediction.statusCode">
         <wc-srs-info-box message-string="srsViewState.prediktionInfo"></wc-srs-info-box>
     </div>
     <div ng-if="srsViewState.prediktionError && srsViewState.prediction.statusCode">
