--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/srs/wcSrsResult.directive.html
@@ -1,8 +1,8 @@
 <div id="srsResult{{id}}">
-    <div ng-if="srsViewState.prediction.description && srsViewState.prediktionInfo && srsViewState.prediction.statusCode">
+    <div ng-if="srsViewState.prediktionInfo">
         <wc-srs-info-box message-string="srsViewState.prediktionInfo"></wc-srs-info-box>
     </div>
-    <div ng-if="srsViewState.prediktionError && srsViewState.prediction.statusCode">
+    <div ng-if="srsViewState.prediktionError">
         <wc-srs-error-box message-string="srsViewState.prediktionError"></wc-srs-error-box>
     </div>
     <div id="predictionBox" ng-if="srsViewState.prediction !== 'error' && srsViewState.prediction.description" class="prediction-box alert alert-danger">
