INTYG-4918: Omstrukturering och uppstädning av scss för webcert

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
@@ -1,4 +1,4 @@
-<div>
+<div class="formly-check-multi-text">
   <label class="control-label inline-block checkbox-inline bold big-checkbox-label check-multi-text__label">
     <input type="checkbox" class="big-checkbox" ng-model="to.open" ng-click="validate()">
     <span dynamic-label key="FRG_{{to.frgId}}.RBK"></span>
