--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/multiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/multiText.formly.html
@@ -1,4 +1,4 @@
-<div>
+<div class="formly-multi-text">
   <wc-form-label to="to" key="options.key"></wc-form-label>
   <textarea id="{{options.key}}" name="{{options.key}}" class="form-control" rows="6" auto-expand ng-model="model[options.key]"
             maxlength="{{to.htmlMaxlength || 3500}}">
