--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeader.partial.html
@@ -1,4 +1,4 @@
-<div>
+<div class="wc-header">
   <div class="header clearfix">
     <div class="headerbox">
       <span wc-authority="NAVIGERING" class="headerbox-logo pull-left">
