--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/smiIntygUv.html
@@ -1,4 +1,4 @@
-<div class="fk-sit-common-ns {{viewState.common.intyg.type}}-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
+<div class="{{viewState.common.intyg.type}}-ns weak-hidden" ng-class="{show: viewState.common.showTemplate}">
   <div wc-spinner label="common.load.certificate" show-spinner="!viewState.common.doneLoading"
        show-content="viewState.common.doneLoading">
 
