--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/panel/fraga/arendePanelFraga.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/fk/arenden/panel/fraga/arendePanelFraga.directive.html
@@ -1,4 +1,4 @@
-<div class="panel-container">
+<div class="arende-panel-fraga panel-container">
   <div class="arende-block"
        ng-class="{'arende-block-handled' : arendeListItem.arende.fraga.status == 'ANSWERED', 'arende-block-fk' : (arendeListItem.arende.fraga.frageStallare | lowercase) == 'fk', 'arende-block-wc' : (arendeListItem.arende.fraga.frageStallare | lowercase) == 'wc'}">
     <div class="arende-block-head clearfix">
