--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygMakulera.dialog.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intygMakulera.dialog.html
@@ -38,7 +38,7 @@
       <span message key="{{button1text}}"></span>
     </button>
 
-    <button type="button" id="{{button3id}}" class="btn btn-info" ng-click="button3click()">
+    <button type="button" id="{{button3id}}" class="btn btn-secondary" ng-click="button3click()">
       <span message key="{{button3text}}"></span>
     </button>
     <div class="webcert-top-padding-section" ng-show="model.showerror">
