--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsResult.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsResult.directive.html
@@ -38,7 +38,7 @@
                     <br>
                 </div>
                 <div class="floatRight">
-                    <button type="button" class="btn btn-info ng-binding" ng-click="redirectToAtgardExternalSite(); logAtgarderRekClicked;">Läs mer</button>
+                    <button type="button" class="btn btn-secondary ng-binding" ng-click="redirectToAtgardExternalSite(); logAtgarderRekClicked;">Läs mer</button>
                 </div>
             </div>
 
@@ -53,7 +53,7 @@
             </div>
             <img ng-show="srsViewState.statistik.statistikBild" ng-src="{{srsViewState.statistik.statistikBild}}" alt=""/>
             <div class="floatRight">
-                <button type="button" class="btn btn-info ng-binding" ng-click="redirectToStatistikExternalSite(); logStatistikClicked();">Läs mer</button>
+                <button type="button" class="btn btn-secondary ng-binding" ng-click="redirectToStatistikExternalSite(); logStatistikClicked();">Läs mer</button>
             </div>
         </div>
 
