--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/smiUtkast.html
@@ -9,7 +9,7 @@
 
         <!-- Integration deleted message -->
         <div id="integration-deleted" ng-if="viewState.common.deleted">
-          <div class="alert alert-info banner-margin">
+          <div class="banner-margin">
             Utkastet är raderat och borttaget från Webcert.
           </div>
         </div>
