--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsQuestionaire.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/srs/wcSrsQuestionaire.directive.html
@@ -15,7 +15,7 @@
         </div>
     
         <div class="srs-questions-submit">
-            <button type="button" id="showBtn-a8722b69-ae4c-4d28-bdf4-9af526c29a44" class="floatRight btn btn-info ng-binding"
+            <button type="button" id="showBtn-a8722b69-ae4c-4d28-bdf4-9af526c29a44" class="floatRight btn btn-secondary ng-binding"
                 ng-click="visaClicked()" ng-disabled="!srsViewState.showVisaKnapp" popover-trigger="mouseenter" popover-popup-delay="300" popover-append-to-body="true"
                 popover-placement="auto top">
                     Visa
