--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/utkast-header/utkastHeader.html
@@ -32,11 +32,11 @@
               </div>
 
               <div class="form-group buttonbar">
-                <button type="button" id="skriv-ut-utkast" class="btn btn-info" ng-if="!viewState.common.isSigned"
+                <button type="button" id="skriv-ut-utkast" class="btn btn-secondary" ng-if="!viewState.common.isSigned"
                         ng-click="print()" title="Skriver ut utkastet.">
                   <i class="glyphicon glyphicon-print"></i>
                 </button>
-                <button type="button" id="ta-bort-utkast" class="btn btn-info" ng-if="!viewState.common.isSigned"
+                <button type="button" id="ta-bort-utkast" class="btn btn-secondary" ng-if="!viewState.common.isSigned"
                         ng-click="discard()" title="Klicka på papperskorgen för att radera utkastet.">
                   <i class="glyphicon glyphicon-trash"></i>
                 </button>
