--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/formly/vagueDate.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/formly/vagueDate.formly.html
@@ -33,7 +33,7 @@
         </ui-select>
       </td>
       <td class="day">
-        <input id="{{options.key}}-day" type="text" class="form-control" ng-disabled="true"
+        <input id="{{options.key}}-day" type="text" class="form-control no-fielderror" ng-disabled="true"
                value="00" maxlength="2" placeholder="DD" ng-blur="validate()">
       </td>
     </tr>
