INTYG-5178: Fixat styling i dialog för "Om webcert" så det matchar sidvarianten.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeaderAboutDialog.template.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/headers/wcHeaderAboutDialog.template.html
@@ -2,7 +2,7 @@
   <button type="button" class="close" data-ng-click="close()">×</button>
   <h3 id="omWebcertDialog">Om Webcert</h3>
 </div>
-<div class="modal-body" style="overflow-y: auto; max-height: 550px">
+<div class="modal-body about-content" style="overflow-y: auto; max-height: 550px">
   <div uib-accordion close-others="true"
        ng-init="open = { om: true, support: false, faq: false, kakor: false }">
     <div uib-accordion-group is-open="open.om">
